--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <i class="fas fa-search"></i> Search
                         </button>
                       <button class="Hide btn btn-danger">
-                         <a href="index.html"><i class="fas fa-sync-alt"></i> Refresh</a>
+                         <a href="javascript:location.reload()"><i class="fas fa-sync-alt"></i> Refresh</a>
                       </button>
                   </div>
                 </div>
