--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
             <h3 style="text-align: center;margin-bottom: 3em;"><span style="color: #000000;">Enter the legend data</span></h3>
               <div class="container mt-4 mb-5">
                 <div class="input-group">
-                  <input id="search-box" class="form-control" type="text" name="search" placeholder="Enter Id(1,2,3,4,5)">
+
+                  <input id="search-box" class="form-control" type="text" name="search" value="Enter Id(1,2,3,4,5)">
 
                   <div class="input-group-append">
-                      <button type="button" class="Show btn btn-primary"  data-toggle="modal" href="#myModal">
-                        <i class="fas fa-search"></i> Search
-                        </button>
+                      <input type="submit" class="Show btn btn-primary" value="search" data-toggle="modal" href="#myModal">
                       <button class="Hide btn btn-danger">
-                         <a href="javascript:location.reload()"><i class="fas fa-sync-alt"></i> Refresh</a>
+                         <a href="index.html"><i class="fas fa-sync-alt"></i> Refresh</a>
                       </button>
                   </div>
                 </div>
